# Nitro

./: .gitignore  README.md  Test_file  date.list  git_bash  nuxt.config.js  package-lock.json  package.json  tailwind.config.js  updated_file.list
backend/: db.sqlite3  (+5 more)
commandline/: pyproject.toml
commandline/commandline/: main.py
commandline/tests/: test_commandline.py
nitro/: .bumpversion.cfg  pyproject.toml
nitro/nitro/: __init__.py  banner.py  core.py  database.py  qc.py  server.py  utils.py
nitro/nitro/demo/Config/: demo.config.yaml
nitro/nitro/formatspec/: samplesheet.fmt
nitro/nitro/workflow/: Snakefile
nitro/nitro/workflow/resources/adapters/: Adapters.fa
nitro/nitro/workflow/resources/reference/: NC_045512.2.dict
nitro/nitro/workflow/rules/bcftools-1.15.1/: consensus.smk  consensus_wrapper.py  env.yaml
nitro/nitro/workflow/rules/bedtools-2.30.0/: env.yaml  genomecov.smk  genomecov_wrapper.py  maskfasta.smk  maskfasta_wrapper.py
nitro/nitro/workflow/rules/bwa-0.7.17/: env.yaml  mem.smk  mem_wrapper.py
nitro/nitro/workflow/rules/fastp-0.23.2/: env.yaml  main.smk  main_wrapper.py
nitro/nitro/workflow/rules/fastqc-0.11.9/: env.yaml  main.smk  main_wrapper.py
nitro/nitro/workflow/rules/gatk-4.2.6.1/: createsequencedictionary.smk  env.yaml  haplotypecaller.smk  haplotypecaller_wrapper.py
nitro/nitro/workflow/rules/qualimap-2.2.2/: bamqc.smk  bamqc_wrapper.py  env.yaml
nitro/nitro/workflow/rules/samtools-1.15.1/: env.yaml  index.smk  index_wrapper.py  merge.smk  merge_wrapper.py  sort.smk  sort_wrapper.py
nitro/tests/: test_cmd.py
(+266 files in other folders)
