[tool.poetry]
name = "commandline"
version = "1.2.1"
description = ""
authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
snakemake = "^7.3.8"
importlib-metadata = "^4.11.3"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
test-commandline = 'commandline.main:start'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

